tests/ast_bad_old_array_type.stderr
tests/ast_bad_old_array_type.sl:27:28: error: expected type
